--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/html2canvas": "^0.5.35",
     "@vercel/analytics": "1.3.1",
+    "@zxing/library": "^0.21.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,10 +47,13 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
@@ -64,6 +69,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
