--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/html2canvas": "^0.5.35",
     "@vercel/analytics": "1.3.1",
     "@zxing/library": "^0.21.3",
@@ -49,6 +50,7 @@
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
